# 20260313-tanaka-test

./: pyproject.toml
.research/: research_history.json
.research/latex/mdpi/: main.tex
config/: config.yaml
config/run/: comparative-0-gemini-truthfulqa.yaml  proposed-gemini-truthfulqa.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
