[project]
name = "ec-cot-experiment"
version = "0.1.0"
description = "Evidence-Coverage Chain-of-Thought prompt tuning experiment"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "google-generativeai>=0.3.0",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: Docker build failed during `uv sync` with error "Unable to determine which files to ship inside the wheel"
# [CAUSE]: Hatchling cannot automatically find the package because there's no directory named `ec_cot_experiment` (project name with underscores). The code is in `src/` directory but hatchling needs explicit configuration.
# [FIX]: Added `[tool.hatch.build.targets.wheel]` section specifying `packages = ["src"]` to tell hatchling where to find the package files.
#
# [OLD CODE]:
# (no tool.hatch.build.targets.wheel section existed)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]